--- a/BE_MINE/src/index.css
+++ b/BE_MINE/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+  font-family: -apple-system, Paaxel, 'Segoe UI', Roboto, monospace,
     Arial, sans-serif;
   margin: auto;
   max-width: 38rem;
